# kingdom

./: .gitignore  README.md  pyproject.toml  vercel.json
demo-go-project/: .gitignore  README.md
demo-go-project/cmd/api/: main.go
demo-project/: .env.example  Makefile  go.mod
demo-project/internal/config/: config.go
demo-project/internal/httpapi/: router.go  router_test.go
kingdom/: __init__.py  analyzer.py  cli.py  generator.py  validator.py  web.py
tests/: test_kingdom.py
web/: app.js  features.js  index.html  styles.css
