[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kingdom"
version = "0.1.0"
description = "AI-powered DevOps bootstrap agent for Go repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kingdom = "kingdom.cli:main"
kingdom-web = "kingdom.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
